Remove superfluous parentheses
The precedence is left-to-right, nothing to see here -- except we can
make the entire thing more function-driven.

JIRA: NETCONF-1494
Change-Id: I73895908b4ad04f22916f95850fa765af555b86c
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>